frontend/vintage/vintage.css
@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);

div.page {
	width:1010px;
}

div.content {
	width:1000px;
}

body {
	background:#3e3a31 url('bg-dark.png');
	font-family:'Yanone Kaffeesatz', sans-serif;
	margin:0;
	padding:0;
}

div.page {
	background:#565249 url('bg-frame.png');
	border:1px solid #827e75;
	-webkit-box-shadow:-3px 4px 0px 0px rgba(0,0,0,0.4);
	-moz-box-shadow:-3px 4px 0px 0px rgba(0,0,0,0.4);
	box-shadow:-3px 4px 0px 0px rgba(0,0,0,0.4);
	margin:37px auto 0 auto;
	padding:8px;
}

div.frame {
	background:#ffffff;
	border:1px solid #403726;
	padding:3px;
}

div.content {
	background:#f9eed0 url('bg-light.png');
	border:1px solid #d7cfa1;
	-webkit-box-shadow:0px 0px 0px 2px #f9eed0;
	-moz-box-shadow:0px 0px 0px 2px #f9eed0;
	box-shadow:0px 0px 0px 2px #f9eed0;
	margin:0;
	padding:45px 0 0 0;
	position:relative;
}

img.logo {
	position:absolute;
	top:-51px;
	left:388px;
}

h1 {
	background:transparent url('bg-menu.png');
	color:#ffffff;
	font-size:30px;
	line-height:43px;
	height:71px;
	margin:28px 0 13px 0;
	padding:0;
	text-align:center;
	text-shadow:2px 2px 0px rgba(0,0,0,0.2);
	text-transform:uppercase;
}

h1:before {
	content:url('bg-menu-left.png');
	left:-107px;
	position:absolute;
}

h1:after {
	content:url('bg-menu-right.png');
	position:absolute;
	right:-106px;
}

div.text {
	font-size:1.1em;
	margin:0 1em 1em 1em;
}

table, pre {
	background:#f9eed0 url('bg-box.png');
	border:1px solid #ffffff;
	-webkit-box-shadow:0px 0px 0px 1px #d7cfa1;
	-moz-box-shadow:0px 0px 0px 1px #d7cfa1;
	box-shadow:0px 0px 0px 1px #d7cfa1;
	border-spacing:0;
	margin:.5em 1em 1em 1em;
	padding:2px;
}

table th {
	border-bottom:1px solid #d7cfa1;
	font-weight:400;
}

table th, table td, pre {
	padding:.25em .75em .25em .75em;
}

table td.left, table th.left {
	border-right:1px solid #d7cfa1;
}

div.text a {
	color:#7d9466;
}

div#ticket {
	background:url('bg-ticket.png');
	background-size:210px 105px;
	background-repeat:no-repeat;
	height:105px;
	position:relative;
	margin:0 auto 0 auto;
	width:210px;
}

div#city, div#entity {
	color:rgba(95,56,12,.4);
	font-size:14px;
	line-height:20px;
	margin:0;
	min-height:20px;
	position:absolute;
	text-align:center;
	top:44px;
	width:71px;
}

div#city {
	left:149px;
	-webkit-transform:rotate(90deg);
	-moz-transform:rotate(90deg);
	-ms-transform:rotate(90deg);
	-o-transform:rotate(90deg);
	transform:rotate(90deg);
}

div#entity {
	left:-10px;
	-webkit-transform:rotate(270deg);
	-moz-transform:rotate(270deg);
	-ms-transform:rotate(270deg);
	-o-transform:rotate(270deg);
	transform:rotate(270deg);
}

div#number {
	color:rgba(95,56,12,1);
	font-size:60px;
	line-height:50px;
	margin:0;
	min-height:23px;
	padding:14px 0 0 0;
	text-align:center;
}

div#minutes {
	color:rgba(95,56,12,.8);
	font-size:14px;
	line-height:20px;
	margin:0;
	padding:5px 0 0 0;
	text-align:center;
}

div#graph {
	margin:28px 0 0 0;
}

g > circle  {
	fill:none;
	stroke:rgb(200,9,29);
	stroke-width:2px;
}

rect.legend {
	fill:rgb(254,238,93);
	stroke:rgb(0,0,0);
	stroke-width:.5px;
}









g.data {
  opacity: 0.2;
  }
g.data:hover {
  opacity: 1 }

g.data:hover > circle, g.selected > circle {
  stroke: #00F;
  }

g.axis > path{
  fill: none }

g.tick > line {
  stroke: #000;
  stroke-width: 1px;
  }

ul#control > li:hover, ul#control > li.selected {
  background: #00F;
  color: white;
  }
ul#control > li {
  display: inline-block;
  width: 5em;
  background: rgba(200,9,29,0.2);
  text-align: center;
  margin: 2px;
  padding: 2px;
  border-radius: 2px;
  font-size: 90%;
  }

ul#control {
  list-style: none;
  padding: 0px;
  }

